add support for hit enter to send msg or login

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -417,7 +417,7 @@ input[type='button']:active
           display: flex;
           align-items: center;
           flex-direction: column;
-          #pt
+          #mt
             font-size: 0.85rem
             color: var(--black-2)
             margin-bottom: 0.1rem
