modify desktop edit eventwindow UI

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -320,6 +320,7 @@ footer
     display: block
   #navbar
     justify-content: center;
+    padding-top: 1rem
     #selecticon
       display: none
       width: 2.5rem
