--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -958,7 +958,7 @@ footer
       display: none
     #profilepanel
       width: 95%
-      margin: 5vh 5vh 1rem 5vh
+      margin: calc(5vh + 1rem) 5vh 1rem 5vh
       #top-region
         #intro
           border-radius: 2rem;
