--- a/templates/profile.pug
+++ b/templates/profile.pug
@@ -15,10 +15,10 @@ html
     link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/profile.sass' %}",rel="stylesheet",type="text/css")
     link(href="{% sass_src 'sass/navbar.sass' %}",rel="stylesheet",type="text/css")
-    link(href="{% sass_src 'sass/eventwindow.sass' %}",rel="stylesheet",type="text/css")
+    //link(href="{% sass_src 'sass/eventwindow.sass' %}",rel="stylesheet",type="text/css")
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
-    //script(src="https://d3js.org/d3.v5.js")
+    script(src="https://d3js.org/d3.v5.js")
     script(src  ="https://cdn.jsdelivr.net/npm/sweetalert2@11")
     script(src="{% static 'js/eventwindow.js' %}")
   {% include 'navbar.pug' %}
