--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -322,7 +322,8 @@ input[type='button']:active
           padding: 0.5rem 1rem
           font-size: 1rem
           cursor: pointer
-
+        #edit-confirm-btn
+          margin-left: 1.5rem;
         
       
   
@@ -711,7 +712,7 @@ input[type='button']:active
           padding: 0.5rem
           margin: 0.5rem
           width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem)
-          min-height: 5.2rem
+          min-height: 4rem
           padding: 0.5rem;
           border: solid var(--background-color-navbar) 0.15rem;
           border-radius: 0.8rem;
@@ -730,11 +731,15 @@ input[type='button']:active
             .info-brief-right
               #friend-name
                 font-size: 0.9rem
+                word-break: break-all;
+                line-height: 1rem;
               .info-brief-school
                 p
                   font-size: 0.8rem;
                   font-weight: 500;
                   color: var(--black-3);
+                  word-break: break-all;
+                  line-height: 1rem;
                 #info-brief-department
                 #info-brief-grade
                 #info-brief-connectnum
@@ -762,173 +767,213 @@ input[type='button']:active
 
 //phone responsive
 @media only screen and (max-width: 480px)
-  .event-detail
-    #eventwindow
-      min-width: 0;
-      width: calc(100% - 3rem);
-      max-height: 90%;
-      flex-direction: column;
-      flex-wrap: nowrap;
-      padding: 1.5rem 0.5rem 1rem 0.5rem;
-      background: linear-gradient(var(--green-1) 40vw, #FFFFFF 50vw);
-      #eventwindow-left
-        width: 100%;
-        margin: 0;
-        #description
-          #description-top
-            #eventwindow-bg
-              height: 35vw
-              width: 35vw
-              #eventpic
-                p
-                  line-height: 35vw
-            #event-heading
-              min-width: 0;
-              width: calc((100% - 37vw));
-              margin: 0
-              margin-top: 2.3rem;
-              #event-title
-                font-size: 1.3rem;
-                font-weight: 500;
-                line-height: 1.5rem;
-              #event-subtitle
-                line-height: 1rem;
-                font-size: 0.9rem;
-                font-weight: 500;
-                margin: 0 0.1rem 0 0.1rem;
-                color: var(--black-1);
-                height: 4.4rem;
-                overflow: auto;
-              #event-require
-                position: absolute;
-                left: 1.5rem;
-                top: 41vw
-                height: 17vw
-                width: 88%
-                margin-top: 0.5rem;
-                .requiretag
-                  border: solid 1px var(--black-3);
-                  margin: 0 0.2rem 0.3rem 0;
-            #date
-              position: absolute;
-              flex-direction: row;
-              transform: translate(0, 0);
-              left: 41.5vw
-              top: 1.5rem
-              #event-date
-                margin: 0 3vw 0 0
-                font-size: 0.7rem
-                width: 5rem
-              #due-date
-                margin: 0 3vw 0 0
-                font-size: 0.7rem
-                width: 5rem
-          #event-detail
-            margin: 3.5rem 0 0 0.5rem;
-            width: calc(100% - 1.5rem);
-            font-size: 0.9rem
-            margin-top: 0.5rem;
-            min-height: 20vw
-            max-height: 30vw
-            padding: 0.1rem 0.5rem;
-            border: solid 2px var(--black-4);
-                
-        #eventmsgregion
-          height: 25vh
-          width: calc(100% - 2rem);
-          box-shadow: none;
-          #msgtitle
-            font-size: 1.1rem;
-            padding: 0 0 0.3rem 0;
-          #eventmsg-board
-            .eventmsg
-              padding: 0
-              background-color: transparent
-              min-height: 2.5rem
-              align-items: flex-start;
-              #eventmsg-right
-                justify-content: flex-start;
-                #eventmsg-righttop
-                  #eventmsg-sendername
-                    height: auto
-                    font-size: 0.8rem
-                  #event-date
-                #eventmsg-rightbottom
-                  #eventmsgtext
-                    font-size: 0.75rem;
-        #eventmsg-sender
-          .comment-operate-region
-            margin: 0.7rem 0.7rem 0.3rem 0;
-            input
-              font-size: 0.9rem;
-            .eventmsg-insert
-              width: 70%
-            .eventmsg-btn
-              left: auto
-            .eventjoin-btn
-              position: fixed
-              bottom: 1.2rem;
-              right: 17vw;
-              z-index: 1;
-            .eventedit-btn
-              position: fixed
-              bottom: 1.2rem;
-              right: 17vw;
-              z-index: 1;
-            
-      #eventwindow-right
-        width: 100%
-        margin-top: 1rem;
-        #eventoperate
-          position: relative
-          left: 0;
-          width: 100%;
-          justify-content: flex-start;
-          flex-direction: row;
-          height: auto
-        
-          #exitbtn1
-            position: fixed;
-            top: 0.8rem;
-            right: 0.8rem;
-          #organizer-link
+  #eventwindow
+    min-width: 0;
+    width: calc(100% - 3rem);
+    max-height: 90%;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    padding: 1.5rem 0.5rem 1rem 0.5rem;
+    background: linear-gradient(var(--green-1) 40vw, #FFFFFF 50vw);
+    margin-top: 2.5vh
+    #eventwindow-left
+      width: 100%;
+      margin: 0;
+      #description
+        #description-top
+          #eventwindow-bg
+            height: 35vw
+            width: 35vw
+            #eventpic
+              p
+                line-height: 35vw
+          #event-heading
+            min-width: 0;
+            width: calc((100% - 37vw));
             margin: 0
-            height: 2.9rem;
-            #organizer-pic
-              width: 2.5rem;
-              height: 2.5rem;
-          #bar
-            height: 1.7rem;
-            width: 2px;
-            margin: 0 0.5rem;
-          #member
+            margin-top: 2.3rem;
+            #event-title
+              font-size: 1.3rem;
+              font-weight: 500;
+              line-height: 1.5rem;
+            #event-subtitle
+              line-height: 1rem;
+              font-size: 0.9rem;
+              font-weight: 500;
+              margin: 0 0.1rem 0 0.1rem;
+              color: var(--black-1);
+              height: 4.4rem;
+              overflow: auto;
+            #event-require
+              position: absolute;
+              left: 1.5rem;
+              top: 41vw
+              height: 17vw
+              width: 88%
+              margin-top: 0.5rem;
+              .requiretag
+                border: solid 1px var(--black-3);
+                margin: 0 0.2rem 0.3rem 0;
+          #date
+            position: absolute;
             flex-direction: row;
+            transform: translate(0, 0);
+            left: 41.5vw
+            top: 1.5rem
+            #event-date
+              margin: 0 3vw 0 0
+              font-size: 0.7rem
+              width: 5rem
+            #due-date
+              margin: 0 3vw 0 0
+              font-size: 0.7rem
+              width: 5rem
+        #event-detail
+          margin: 3.5rem 0 0 0.5rem;
+          width: calc(100% - 1.5rem);
+          font-size: 0.9rem
+          margin-top: 0.5rem;
+          min-height: 20vw
+          max-height: 30vw
+          padding: 0.1rem 0.5rem;
+          border: solid 2px var(--black-4);
+              
+      #eventmsgregion
+        height: 25vh
+        width: calc(100% - 2rem);
+        box-shadow: none;
+        #msgtitle
+          font-size: 1.1rem;
+          padding: 0 0 0.3rem 0;
+        #eventmsg-board
+          .eventmsg
+            padding: 0
+            background-color: transparent
+            min-height: 2.5rem
+            align-items: flex-start;
+            #eventmsg-right
+              justify-content: flex-start;
+              #eventmsg-righttop
+                #eventmsg-sendername
+                  height: auto
+                  font-size: 0.8rem
+                #event-date
+              #eventmsg-rightbottom
+                #eventmsgtext
+                  font-size: 0.75rem;
+      #eventmsg-sender
+        .comment-operate-region
+          margin: 0.7rem 0.7rem 0.3rem 0;
+          input
+            font-size: 0.9rem;
+          .eventmsg-insert
+            width: 70%
+          .eventmsg-btn
+            left: auto
+          .eventjoin-btn
+            position: fixed
+            bottom: 1.2rem;
+            right: 17vw;
+            z-index: 1;
+          .eventedit-btn
+            position: fixed
+            bottom: 1.2rem;
+            right: 17vw;
+            z-index: 1;
+          #edit-confirm-btn
+            position: fixed
+            bottom: 1.2rem;
+            right: 20vw;
+            z-index: 1;
+          #edit-cancel-btn
+            position: fixed
+            bottom: 1.2rem;
+            right: 20vw;
+            z-index: 1;
             
-            #like-m
-              flex-direction: row;
-              #lt
-              a
-                img
-                p
-              #likepage-btn
-                margin: 0 0.3rem;
-                line-height: 1rem;
-                font-size: 0.8rem;
-                font-weight: 700;
-                line-height: 0.8rem;
-            #part-m
-              flex-direction: row;
-              #mt
-              a
-                img
-                p
-              #partpage-btn
-                margin: 0 0.3rem;
-                line-height: 1rem;
-                font-size: 0.8rem;
-                font-weight: 700;
-                line-height: 0.8rem;
-          #likebutton
-            bottom: 0;
-            right: 0;
-      #eventjoinwindow
+    #eventwindow-right
+      width: 100%
+      margin-top: 1rem;
+      #eventoperate
+        position: relative
+        left: 0;
+        width: 100%;
+        justify-content: flex-start;
+        flex-direction: row;
+        height: auto
+      
+        #exitbtn1
+          position: fixed;
+          top: 0.8rem;
+          right: 0.8rem;
+        #organizer-link
+          margin: 0
+          height: 2.9rem;
+          #organizer-pic
+            width: 2.5rem;
+            height: 2.5rem;
+        #bar
+          height: 1.7rem;
+          width: 2px;
+          margin: 0 0.5rem;
+        #member
+          flex-direction: row;
+          
+          #like-m
+            flex-direction: row;
+            #lt
+            a
+              img
+              p
+            #likepage-btn
+              margin: 0 0.3rem;
+              line-height: 1rem;
+              font-size: 0.8rem;
+              font-weight: 700;
+              line-height: 0.8rem;
+          #part-m
+            flex-direction: row;
+            #mt
+            a
+              img
+              p
+            #partpage-btn
+              margin: 0 0.3rem;
+              line-height: 1rem;
+              font-size: 0.8rem;
+              font-weight: 700;
+              line-height: 0.8rem;
+        #likebutton
+          bottom: 0;
+          right: 0;
+    .eventsubwindow
+        min-width: 0
+          
+    #eventjoinwindow
+    #eventcontrol
+      #no-apply
+        font-size: 1rem;
+        margin: 12vh 0;
+      .eventcontainer
+        #control-btns
+          input
+            margin: 0 1vw;
+            font-size: 0.7rem;
+            font-weight: 600;
+    #eventlikes-window
+      .eventcontainer
+        #likeslist
+          .like-info
+            width: calc((100% - 5rem) / 2);
+            margin: 0.5rem 0;
+            a
+              .info-brief
+                #info-brief-img
+                  margin: 0
+                .info-brief-right
+                  #friend-name
+                  .info-brief-school
+                    #info-brief-department
+                    #info-brief-grade
+                    #info-brief-connectnum
+    #eventpart-window
