add desktop/pwa event participant subwindow

--- a/templates/eventwindow.pug
+++ b/templates/eventwindow.pug
@@ -195,10 +195,6 @@ html
             $(document).ready(function(){
               $("input#edit-btn").on("click", function() {
                 edit_event_transition();
-                if($(window).width() < 480) {}else{
-                  $('#date').css({'flex-direction': 'row'});
-                  $('#event-heading').css({'width': '25vw', 'min-width': 'calc(14 * 1.5rem)'})
-                }
               })
               $("input#delete-btn").on("click", function() {
                 delete_event_handler(
@@ -224,10 +220,6 @@ html
               $(document).on("click", "input#edit-cancel-btn", function() {
                 let id = $(this).closest('#eventwindow').attr('class')
                 reset_event_window();
-                if($(window).width() < 480){}else{
-                  $('#date').css({'flex-direction': 'row'});
-                  $('#event-heading').css({'width': '20vw', 'min-width': 'calc(11 * 1.5rem)'})
-                }
                 event_handler(
                 "/event/" + id, 
                 "{{ request.user.id }}", 
@@ -240,10 +232,10 @@ html
         img#exitbtn5.exitbtn(src="{% static 'file/exiticon.png' %}")
         .eventcontainer
           p 已按讚
-          #likeslist
+          #likeslist.memberlist
         
       #eventpart-window.eventsubwindow
         img#exitbtn6.exitbtn(src="{% static 'file/exiticon.png' %}")
         .eventcontainer
           p 已加入
-          #participantslist
+          #participantslist.memberlist
