--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -681,69 +681,69 @@ input[type='button']:active
           background-color: var(--red)
         #end-btn
           background-color: var(--black-4);
-  #eventlikes-window
-    .eventcontainer
-      p
-        font-size: 2rem
-        font-weight: 600
-      #likeslist
-        display: flex
-        flex-direction: row
-        flex-wrap: wrap
-        align-content: flex-start
-        justify-content: space-evenly
-        height: 83%
-        overflow-y: auto
-        overflow-x: hidden
-        border-radius: 0 0 3rem 3rem
-        bottom: 0
-        width: 97%
-        
-        #virtual-like
-          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem + 2.3rem)
-          height: 0
-        
-        .like-info:hover
-          transform: scale(1.02)
-        .like-info:active
-          transform: scale(1)
-        
-        .like-info
-          padding: 0.5rem
-          margin: 0.5rem
-          width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem)
-          min-height: 4rem
-          padding: 0.5rem;
-          border: solid var(--background-color-navbar) 0.15rem;
-          border-radius: 0.8rem;
-          box-shadow: 0.15rem 0.1rem 0.3rem 0.1rem var(--boxshadow-color)
-          cursor: pointer
-          a
-            margin: 0
-          .info-brief
-            display: flex
-            #info-brief-img
-              width: 3rem
-              height: 3rem
-              border-radius: 50%
-              margin-right: 0.6rem
-              
-            .info-brief-right
-              #friend-name
-                font-size: 0.9rem
+
+  .eventcontainer
+    p
+      font-size: 2rem
+      font-weight: 600
+    .memberlist
+      display: flex
+      flex-direction: row
+      flex-wrap: wrap
+      align-content: flex-start
+      justify-content: space-evenly
+      height: 83%
+      overflow-y: auto
+      overflow-x: hidden
+      border-radius: 0 0 3rem 3rem
+      bottom: 0
+      width: 97%
+      
+      .virtual-info
+        width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem + 2.3rem)
+        height: 0
+      
+      .member-info:hover
+        transform: scale(1.02)
+      .member-info:active
+        transform: scale(1)
+      
+      .member-info
+        padding: 0.5rem
+        margin: 0.5rem
+        width: calc((100% - 6 * 2 * 0.5rem) / 3 - 1.7rem)
+        min-height: 4rem
+        padding: 0.5rem;
+        border: solid var(--background-color-navbar) 0.15rem;
+        border-radius: 0.8rem;
+        box-shadow: 0.15rem 0.1rem 0.3rem 0.1rem var(--boxshadow-color)
+        cursor: pointer
+        a
+          margin: 0
+        .info-brief
+          display: flex
+          #info-brief-img
+            width: 3rem
+            height: 3rem
+            border-radius: 50%
+            margin-right: 0.6rem
+            
+          .info-brief-right
+            #friend-name
+              font-size: 0.9rem
+              word-break: break-all;
+              line-height: 1rem;
+            .info-brief-school
+              p
+                font-size: 0.8rem;
+                font-weight: 500;
+                color: var(--black-3);
                 word-break: break-all;
                 line-height: 1rem;
-              .info-brief-school
-                p
-                  font-size: 0.8rem;
-                  font-weight: 500;
-                  color: var(--black-3);
-                  word-break: break-all;
-                  line-height: 1rem;
-                #info-brief-department
-                #info-brief-grade
-                #info-brief-connectnum
-          #info-brief-relation
+              #info-brief-department
+              #info-brief-grade
+              #info-brief-connectnum
+        #info-brief-relation
           
         
 
@@ -960,10 +960,10 @@ input[type='button']:active
             margin: 0 1vw;
             font-size: 0.7rem;
             font-weight: 600;
-    #eventlikes-window
+    .eventsubwindow
       .eventcontainer
-        #likeslist
-          .like-info
+        .memberlist
+          .member-info
             width: calc((100% - 5rem) / 2);
             margin: 0.5rem 0;
             a
