fix like number count on phone UI

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -404,7 +404,7 @@ footer
           top: 3.2rem
           left: 50%
           right: auto
-          background-color: white;
+          background-color: #EEE;
           border-radius: 1.5rem;
           border: solid 2px #CCC;
           //box-shadow: 0rem 0.5rem 0.6rem 0rem var(--black-2);
