--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -1025,7 +1025,7 @@ footer
       #bottom-region
         margin: 1rem 0 5rem 0;
         #left-pane
-          width: auto
+          width: calc(100% - 3.5rem)
           padding: 1rem 1.5rem;
           margin-bottom:
           #title-count
