some modify of about us responsive UI

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -283,6 +283,12 @@ a
 
   #img-cards
     top: 14rem
+    border-radius: 2.5rem
+    h1
+      font-size: 3rem
+      font-weight: 500
+    #slogan
+      font-size: 1rem
     #cards
       .logs
         width: 100%
