--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -136,7 +136,7 @@ input[type='button']:active
           display: flex
           flex-direction: column;
           flex-wrap: nowrap;
-          align-items: center;
+          align-items: flex-start;
           #event-date
             font-size: 0.8rem
             color: var(--fontcolor-third)
@@ -800,7 +800,7 @@ input[type='button']:active
               line-height: 1rem;
               font-size: 0.9rem;
               font-weight: 500;
-              margin: 0 0.1rem 0 0.1rem;
+              margin: 0.3rem 0.1rem 0 0.1rem;
               color: var(--black-1);
               height: 4.4rem;
               overflow: auto;
