--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -970,6 +970,20 @@ footer
               border: solid 2px var(--black-4);
               width: 45vw
               height: 45vw
+              #editpicfilter
+                width: 46vw
+                height: 46vw
+                font-size: 1rem
+                vertical-align: middle
+                display: table-cell
+                line-height: 10rem
+              #fileselectedfilter
+                width: 46vw
+                height: 46vw
+                font-size: 1rem
+                vertical-align: middle
+                display: table-cell
+                line-height: 10rem
             #user-name
               font-size: 2.1rem;
               font-weight: 500;
@@ -988,6 +1002,10 @@ footer
               color: var(--black-1);
               #description
                 font-size: 0.9rem;
+              #descriptionarea
+                background-color: white
+                align-items: center
+                width: 94%
                 
             .tag-field
               font-size: 0.9rem;
