small modify of profile page and event edit page

--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -874,64 +874,65 @@ input[type='button']:active
                 #event-date
               #eventmsg-rightbottom
                 #eventmsgtext
-                  font-size: 0.75rem;
+                  font-size: 0.75rem
       #eventmsg-sender
         .comment-operate-region
-          margin: 0.7rem 0.7rem 0.3rem 0;
+          margin: 0.7rem 0.7rem 0.3rem 0
           input
-            font-size: 0.9rem;
+            font-size: 0.9rem
           .eventmsg-insert
             width: 70%
           .eventmsg-btn
             left: auto
           .eventjoin-btn
             position: fixed
-            bottom: 1.2rem;
-            right: 17vw;
-            z-index: 1;
+            bottom: 1.2rem
+            right: 17vw
+            z-index: 1
           .eventedit-btn
             position: fixed
-            bottom: 1.2rem;
-            right: 17vw;
-            z-index: 1;
+            bottom: 1.2rem
+            right: 17vw
+            z-index: 1
           #edit-confirm-btn
             position: fixed
-            bottom: 1.2rem;
-            right: 20vw;
-            z-index: 1;
+            bottom: 1.2rem
+            right: 20vw
+            z-index: 1
           #edit-cancel-btn
             position: fixed
-            bottom: 1.2rem;
-            right: 20vw;
-            z-index: 1;
-            
+            bottom: 1.2rem
+            right: 40vw
+            z-index: 1
+            background-color: var(--black-5)
+
     #eventwindow-right
       width: 100%
-      margin-top: 1rem;
+      margin-top: 1rem
       #eventoperate
         position: relative
         left: 0;
-        width: 100%;
-        justify-content: flex-start;
-        flex-direction: row;
+        width: 100%
+        justify-content: flex-start
+        flex-direction: row
         height: auto
       
         #exitbtn1
-          position: fixed;
-          top: 0.8rem;
-          right: 0.8rem;
+          position: fixed
+          top: 0.8rem
+          right: 0.8rem
         #organizer-link
           margin: 0
-          height: 2.9rem;
+          height: 2.9rem
           #organizer-pic
-            width: 2.5rem;
-            height: 2.5rem;
+            width: 2.5rem
+            height: 2.5rem
         #bar
-          height: 1.7rem;
+          height: 1.7rem
           width: 2px;
-          margin: 0 0.5rem;
+          margin: 0 0.5rem
         #member
-          flex-direction: row;
+          flex-direction: row
           
           #like-m
             flex-direction: row;
