--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -683,8 +683,6 @@ footer
         background-color: var(--background-color-event)
         
     #tab-navbar
-        
-    #tab-navbar
       position: relative
       top: -2.2rem
       display: flex
@@ -1031,8 +1029,8 @@ footer
                   width: calc(0.9rem + 0.5rem);
                   font-size: 0.9rem;
                 .tag-comment
-                  //position: relative;
-                  //top: 0
+                  p
+                    margin-left: 0.5rem
               p
                 padding: 0.15rem;
             #buttons
@@ -1055,6 +1053,10 @@ footer
               p
                 margin-left: 1rem;
                 color: var(--black-1);
+        #right-pane
+          #tab-navbar
+            input
+              font-size: 1.1rem
         #friends-avatar
           //max-height: 22.7rem
           max-height: 15.8rem
