modify eventwindow phone UI

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -178,7 +178,7 @@ a
       width: 22rem
       top: 0
       right: 8rem
-      background-color: white
+      background-color: #EEE
       //opacity: 0.95
       
       border-radius: 1.5rem
@@ -255,10 +255,12 @@ a
               #noticesendername
                 font-size: 1rem
                 font-weight: 500
+                line-height: 1.3rem;
               .notice-detail
                 font-size: 0.8rem
-                font-weight: 400
+                font-weight: 500
                 white-space: normal
+                line-height: 1rem;
               #noticeevent
                 font-size: 1.2rem
                 font-weight: 600
@@ -272,9 +274,8 @@ a
             #notice-rightbottom
               #notice-date
                 font-size: 0.7rem
-                color: #777777
-                font-weight: 700
-                //background-color: pink
+                color: var(--black-1);
+                font-weight: 400;
           #notice-status
             width: 8%
             #notice-dot
