--- a/static/sass/eventwindow.sass
+++ b/static/sass/eventwindow.sass
@@ -97,6 +97,7 @@ input[type='button']:active
             //border: solid 2px var(--black-3);
             //padding-left: 0.5rem
             word-break: break-all;
+            line-height: 1.8rem;
           #event-subtitle
             font-size: 1rem
             color: var(--fontcolor-third)
@@ -197,8 +198,6 @@ input[type='button']:active
         overflow: scroll
         overflow-x: hidden
         
-        .eventmsg:hover
-          background-color: var(--background-color-input)
         .eventmsg
           display: flex
           flex-direction: row
@@ -207,8 +206,6 @@ input[type='button']:active
           width: 95%
           margin: 0 0 0.4rem 0
           border-radius: 0.5rem
-          background-color: var(--background-color-input-hover)
-          padding: 0.5rem
           
           a
             margin: 0
@@ -778,21 +775,20 @@ input[type='button']:active
     flex-wrap: nowrap;
     padding: 1.5rem 0.5rem 1rem 0.5rem;
     background: linear-gradient(var(--green-1) 40vw, #FFFFFF 50vw);
-    margin-top: 2.5vh
     #eventwindow-left
       width: 100%;
       margin: 0;
       #description
         #description-top
           #eventwindow-bg
-            height: 35vw
-            width: 35vw
+            height: 25vw
+            width: 25vw
             #eventpic
               p
                 line-height: 35vw
           #event-heading
             min-width: 0;
-            width: calc((100% - 37vw));
+            width: calc((100% - 27vw));
             margin: 0
             margin-top: 2.3rem;
             #event-title
@@ -807,14 +803,14 @@ input[type='button']:active
               font-weight: 500;
               margin: 0.3rem 0.1rem 0 0.1rem;
               color: var(--black-1);
-              height: 4.4rem;
+              height: auto
               overflow: auto;
             input#event-subtitle
               height: 1.3rem
             #event-require
               position: absolute;
               left: 1.5rem;
-              top: 41vw
+              top: 31vw
               height: 17vw
               width: 88%
               margin-top: 0.5rem;
@@ -825,7 +821,7 @@ input[type='button']:active
             position: absolute;
             flex-direction: row;
             transform: translate(0, 0);
-            left: 41.5vw
+            left: 31.5vw
             top: 1.5rem
             #event-date
               margin: 0 3vw 0 0
@@ -847,7 +843,7 @@ input[type='button']:active
           width: calc(100% - 1.5rem);
           font-size: 0.9rem
           margin-top: 0.5rem;
-          min-height: 20vw
+          min-height: 10vh
           max-height: 30vw
           padding: 0.1rem 0.5rem;
           border: solid 2px var(--black-4);
@@ -886,9 +882,9 @@ input[type='button']:active
             left: auto
           .eventjoin-btn
             position: fixed
-            bottom: 1.2rem
-            right: 17vw
-            z-index: 1
+            bottom: 2vh
+            right: 17vw;
+            z-index: 1;
           .eventedit-btn
             position: fixed
             bottom: 1.2rem
@@ -908,14 +904,14 @@ input[type='button']:active
 
     #eventwindow-right
       width: 100%
-      margin-top: 1rem
+      margin-top: 4.5rem;
       #eventoperate
-        position: relative
-        left: 0;
-        width: 100%
-        justify-content: flex-start
-        flex-direction: row
+        position: absolute
+        width: 93%;
+        justify-content: flex-start;
+        flex-direction: row;
         height: auto
+        bottom: 0.5rem
       
         #exitbtn1
           position: fixed
@@ -930,7 +926,7 @@ input[type='button']:active
         #bar
           height: 1.7rem
           width: 2px;
-          margin: 0 0.5rem
+          margin: 0 0.2rem;
         #member
           flex-direction: row
           
@@ -959,8 +955,8 @@ input[type='button']:active
               font-weight: 700;
               line-height: 0.8rem;
         #likebutton
-          bottom: 0;
           right: 0;
+          bottom: calc(2.5vw - 0.5vh);
     .eventsubwindow
         min-width: 0
           
