--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -329,8 +329,8 @@ body
     flex-direction: column
   #panel1
     position: static
-    margin: 5rem 5vw 2rem 5vw
-    width: 90vw
+    margin: 5rem 1rem 2rem 1rem
+    width: calc(100% - 6.4rem)
   #background-element
     #login-leftpic
       width: 90%
