modify tag color

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -265,13 +265,19 @@ footer
           background-color: var(--yellow)
         .personality-style:hover
           background-color: var(--yellow-2)
+        .personality-input
+          background-color: var(--yellow-2)
         .skill-style
           background-color: var(--green-2)
         .skill-style:hover
           background-color: var(--green-3)
+        .skill-input
+          background-color: var(--green-3)
         .interest-style
           background-color: var(--orange-2)
         .interest-style:hover
+          background-color: var(--orange-3)
+        .interest-input
           background-color: var(--orange-3)
         .tag-style
           position: relative
