modify tag comment condition

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -6,6 +6,11 @@
   margin: 0
   padding: 0
 
+input
+  -webkit-appearance: none
+  -moz-appearance: none
+  appearance: none
+
 #navbar-2
   display: none
   position: fixed
