--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -266,18 +266,24 @@ footer
         .personality-style:hover
           background-color: var(--yellow-2)
         .personality-input
+          background-color: var(--yellow)
+        .personality-input:hover
           background-color: var(--yellow-2)
         .skill-style
           background-color: var(--green-2)
         .skill-style:hover
           background-color: var(--green-3)
         .skill-input
+          background-color: var(--green-2)
+        .skill-input:hover
           background-color: var(--green-3)
         .interest-style
           background-color: var(--orange-2)
         .interest-style:hover
           background-color: var(--orange-3)
         .interest-input
+          background-color: var(--orange-2)
+        .interest-input:hover
           background-color: var(--orange-3)
         .tag-style
           position: relative
@@ -443,10 +449,10 @@ footer
         input:focus
           width: 5rem
         
-        input
-          background-color: var(--background-color-tag1)
-        input:hover
-          background-color: var(--background-color-tag1-hover)
+        // input
+        //   background-color: var(--background-color-tag1)
+        // input:hover
+        //   background-color: var(--background-color-tag1-hover)
       
       .tag-field:nth-child(3)
         .tag-style
