modify aboutus card size, fix member list align

--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -22,7 +22,7 @@ html
   body
     {% include 'navbar.pug' %} 
     #background
-    img#group-img(src="{% static './file/groupphoto_2.png'%}")
+    #group-img //(src="{% static './file/groupphoto_2.png'%}")
     #about_details 
     #img-cards
 
