modify profile edit UI

--- a/static/sass/profile.sass
+++ b/static/sass/profile.sass
@@ -1027,8 +1027,10 @@ footer
                 padding: 0.15rem;
             .tag-field:nth-child(2)
               border-radius: 1rem 1rem 0 0
-            .tag-field:nth-child(5)
+            .tag-field:nth-child(4)
               border-radius: 0 0 1rem 1rem
+            .tag-field:nth-child(5)
+              border-radius: 0 0 1rem 1rem 
             .tag-field:nth-child(3)
               border-radius: 0
               .tag-style
