fix like number NaN problem when outside the homepage

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -161,12 +161,13 @@ a
       /*background-image: url('../file/personalinfoicon.png')
       width: 2rem
       height: 2rem
-      background-color: var(--background-color-userpic)
       border-radius: 50%
+      background-color: var(--background-color-userpic)
       border: solid var(--border-color-userpic) 0.15rem
       #userpic
         width: 2rem
         height: 2rem
+        border-radius: 50%
     #logout
       background-image: url('../file/logouticon.png')
     #home
