--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -232,14 +232,14 @@ a
             border-radius: 50%
             background-color: var(--background-color-userpic)
         
-          #notice-right
+          .notice-right
             display: flex
             flex-direction: column
             flex-wrap: nowrap
             justify-content: space-evenly
             align-content: flex-start
             margin: 0 0.5rem
-            
+            cursor: pointer
             
             #notice-righttop
               display: flex
@@ -267,6 +267,7 @@ a
                 font-weight: 500
                 white-space: normal
                 line-height: 1rem;
+                margin-left: 0.2rem
               #noticeevent
                 font-size: 1.2rem
                 font-weight: 600
