--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -34,19 +34,31 @@ body
             .notice
               a(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}")
                 img#noticesenderpic(src="{{ noticedata.from_user.userextend.img.url }}")
-              #notice-right
+              {% if noticedata.notification_type == 0 %}
+              .notice-right
                 #notice-righttop
-                  a#noticesendername(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}") {{ noticedata.from_user.userextend.full_name }}
-                  {% if noticedata.notification_type == 0 %}
+                  #noticesendername {{ noticedata.from_user.userextend.full_name }}
+                  
                   a.notice-detail {{ noticedata.text }}
                   #notice-event(style="display: none") {{ noticedata.event.id }}
-                  {% elif noticedata.notification_type == 1 %}
-                  a.notice-detail(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}") {{ noticedata.text }}
-                  {% else %}
-                  a.notice-detail(href="{% url 'profile' id=request.user.userextend.pk %}") {{ noticedata.text }}
-                  {% endif %}
                 #notice-rightbottom
                   p#notice-date {{ noticedata.delta_time }}
+              {% elif noticedata.notification_type == 1 %}
+              a.notice-right(href="{% url 'profile' id=noticedata.from_user.userextend.pk %}")
+                #notice-righttop
+                  #noticesendername {{ noticedata.from_user.userextend.full_name }}
+                  .notice-detail {{ noticedata.text }}
+                #notice-rightbottom
+                  p#notice-date {{ noticedata.delta_time }}
+              {% elif noticedata.notification_type == 2 %}
+              a.notice-right(href="{% url 'profile' id=request.user.userextend.pk %}")
+                #notice-righttop
+                  #noticesendername {{ noticedata.from_user.userextend.full_name }}
+                  .notice-detail {{ noticedata.text }}
+                #notice-rightbottom
+                  p#notice-date {{ noticedata.delta_time }}
+              {% endif %}
+
               {% if not noticedata.is_read %}
               #notice-status
                 span#notice-dot
@@ -54,16 +66,16 @@ body
             
             {% empty %}
             .notice
-              #notice-right
+              .notice-right
                 #notion-righttop
                   p 目前沒有通知喔～
             {% endfor %}
             script.
               $(document).ready(function(){
-                $(".notice-detail").on("click", function() {
-                  if ($(this).siblings("#notice-event").length > 0) {
+                $(".notice-right").on("click", function() {
+                  if ($(this).children("#notice-righttop").children("#notice-event").length > 0) {
                     event_handler(
-                      "/event/" + $(this).siblings("#notice-event").text(),
+                      "/event/" + $(this).children("#notice-righttop").children("#notice-event").text(),
                       "{{ request.user.id }}",
                       "{{ csrf_token}}",
                     )
