--- a/static/sass/homepage.sass
+++ b/static/sass/homepage.sass
@@ -792,7 +792,7 @@ a
     overflow: auto
     p
       font-size: 0.9rem
-      margin-left: 0
+      margin-left: 1rem
     p:first-of-type
       margin-top: 3rem
     #comment-region
