--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -222,6 +222,7 @@ a
           margin: 0.3rem
           padding: 0.15rem 0.2rem
           border-radius: 1rem
+          position: relative
           
           a
             margin: 0
@@ -284,12 +285,15 @@ a
                 color: var(--black-1);
                 font-weight: 400;
           #notice-status
-            width: 8%
+            position: absolute;
+            transform: translate(-50%, -50%);
+            top: 50%;
+            right: 0
+            
             #notice-dot
               display: block
-              width: 5px
-              height: 5px
-              float: right
+              width: 8px
+              height: 8px
               border-radius: 50%
               background-color: red
 
