add responaive for phone with notch

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -114,7 +114,8 @@ a
     font-weight: 500
     font-size: 1rem
     color: var(--black-4)
-    margin-left: 1rem
+    margin-left: 2rem
+    text-indent: -1rem;
   
 
 #img-cards
@@ -294,8 +295,15 @@ a
     #cards
       margin: 0
       .logs
-        width: 100%
+        width: 80%
         margin-bottom: 10rem;
+        .top
+          .version
+            
+          .date
+        .description
+          font-size: 0.75rem;
+          color: var(--black-4)
       #gap3
         height: 20vh;
 
