--- a/templates/about_us.pug
+++ b/templates/about_us.pug
@@ -165,6 +165,12 @@ html
             p.date 21/6/27
           p.description - app加緊趕工ing!!
           
+          .top
+            p.version 0.0.17,18,19,20
+            p.date 21/6/28,29
+          p.description - 改了很多很多很多很多東西
+          p.description - 各位晚ㄢ
+          
           
     script(src="https://code.jquery.com/jquery-3.2.1.min.js")
     script(src="https://code.jquery.com/ui/1.12.1/jquery-ui.js")
