--- a/templates/navbar.pug
+++ b/templates/navbar.pug
@@ -7,7 +7,8 @@ link(href="{% sass_src 'sass/variable.sass' %}",rel="stylesheet",type="text/css"
 body
   #navbar-2
   #navbar
-    img#selecticon(src="{% static './file/app-selectericon.png'%}")
+    //img#selecticon(src="{% static './file/app-selectericon.png'%}")
+    //img#loadinggif(src="{% static 'file/connectloading.gif' %}", style='display: none')
     a(href="{% url 'home' %}")
       #title CONNECT.
 
