modify aboutus card UI

--- a/static/sass/about_us.sass
+++ b/static/sass/about_us.sass
@@ -308,7 +308,7 @@ a
         height: 20vh;
 
       .card
-        margin-bottom: 5%
+        margin: 5vw 4vw;
         height: 13rem;
         width: 8rem;
         .card-detail
