fix checkbox missing problem

--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -6,7 +6,15 @@
   margin: 0
   padding: 0
 
-input
+input[type=submit]
+  -webkit-appearance: none
+  -moz-appearance: none
+  appearance: none
+input[type=button]
+  -webkit-appearance: none
+  -moz-appearance: none
+  appearance: none
+input[type=select]
   -webkit-appearance: none
   -moz-appearance: none
   appearance: none
