--- a/templates/login.pug
+++ b/templates/login.pug
@@ -77,7 +77,7 @@ html
           #term-div
             input#terms(type="checkbox", name="terms")
             label(for='terms') I Accept Terms and Condition, Privacy Policy
-
+          .err-msg
           .buttons
             input#sign-up-btn(value="註冊", type="button")
             p or
