--- a/static/sass/login.sass
+++ b/static/sass/login.sass
@@ -69,7 +69,7 @@ body
   
 
 //#login-panel
-.panel
+#login-panel
   background-color: white
   border: 0.2rem solid #FFC5B2
   box-shadow: 5px 10px 25px 0px #00000026
@@ -80,10 +80,11 @@ body
   padding: 1.5rem 2rem
   z-index: 10
   width: 100%
+  overflow-y: auto
 
   h1
     text-align: center
-    font-size: 2.5rem
+    font-size: 2rem
     margin: 0 0 0.5rem 0
   hr
     height: 0rem
