add support for tag edit before submit

--- a/templates/profile_edit.pug
+++ b/templates/profile_edit.pug
@@ -148,8 +148,35 @@ html
                 
                 {% if request.user.is_authenticated and request.user.pk == user.user.pk %}
                 //a(href="/logout/") 登出
-                input(type='submit', value="送出")
+                input#submit-btn(type='submit', value="送出")
                 a(href="{% url 'profile' id=request.user.userextend.pk %}") 取消
+                script.
+                  $(document).ready(function(){
+                    $("#submit-btn").on("click", function() {
+                      $(this).preventDefault();
+                      if ($(".personality-input").val() != "") {
+                        tag_edit_handler(
+                          "{% url 'tag_edit' %}", 
+                          "{{ csrf_token }}", 
+                          $.trim($(".personality-input").val()),
+                          "personality");
+                      }
+                      if ($(".skill-input").val() != "") {
+                        tag_edit_handler(
+                          "{% url 'tag_edit' %}", 
+                          "{{ csrf_token }}", 
+                          $.trim($(".skill-input").val()),
+                          "skill");
+                      }
+                      if ($(".interest-input").val() != "") {
+                        tag_edit_handler(
+                          "{% url 'tag_edit' %}", 
+                          "{{ csrf_token }}", 
+                          $.trim($(".interest-input").val()),
+                          "interest");
+                      }
+                      $("#intro").submit();
+                    })
                 {% else %}
                 input(type="button", value="建立連結")
                 input(type="button", value="傳訊息")
