--- a/static/sass/navbar.sass
+++ b/static/sass/navbar.sass
@@ -349,7 +349,11 @@ footer
       #top-region
         #intro
           margin-top: 2.5rem
-
+  #panel1
+    margin-top: 6.5rem
+  #container
+    margin: 6.3rem auto 5rem auto;
+          
 //tablet responsive
 @media only screen and (max-width: 1024px)
   #selecticon
